Bug 618810 - Qt Message Pump locks up in case of nested loops in flash plugin. r=dougt a=npodb